--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,6 +2,8 @@
   <head>
     <title>BoilerPlate</title>
     <meta name='viewport' content='width=device-width' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <link rel="stylesheet" href="/dist/public/main.css">
   </head>
   <body>
     <div class="parent_container">
@@ -25,7 +27,8 @@
         s.parentNode.insertBefore(wf, s);
       })();
     </script>
-    <script type="text/javascript" src="/assets/public/main.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+    <script type="text/javascript" src="/dist/public/main.bundle.js"></script>
   </body>
 <html>
 
