--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,16 +2,11 @@
   <head>
     <title>BoilerPlate</title>
     <meta name='viewport' content='width=device-width' />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <link rel="stylesheet" href="/dist/public/main.css">
   </head>
   <body>
-    <div class="parent_container">
-      <div class="row">
-        <div class="col s12 m12 l12">
-          <div id="main" class="main_container">
-        </div>
-      </div>
+    <div id="main" class="react-target">
+      <div class="loader"></div>
     </div>
     <script type="text/javascript">
       WebFontConfig = {
@@ -31,9 +26,3 @@
     <script type="text/javascript" src="/dist/public/main.bundle.js"></script>
   </body>
 <html>
-
-
-  <!--  Scripts-->
-
-   
-
